@@ -1,5 +1,5 @@
 #! /usr/bin/python -u
-# Copyright 2015 Canonical Ltd.  This software is licensed under the
+# Copyright 2015-2017 Canonical Ltd.  This software is licensed under the
 # GNU Affero General Public License version 3 (see the file LICENSE).
 
 """A script that builds a snap."""
@@ -58,7 +58,7 @@ class SnapBuilder:
         :param echo: if True, print the command before executing it.
         :param get_output: if True, return the output from the command.
         """
-        args = set_personality(self.options.arch, args)
+        args = set_personality(args, self.options.arch)
         if echo:
             print(
                 "Running in chroot: %s" % ' '.join(
